Working native image support